--- a/hw3/styles/style.css
+++ b/hw3/styles/style.css
@@ -14,4 +14,22 @@ textarea {
   outline: none;
   border: 2px solid red; }
 
+.messageWrong {
+  display: inline-block;
+  animation: appearing 1s ease-in-out; }
+  .messageWrong div {
+    display: inline-block; }
+  .messageWrong .messageWrong_triangle {
+    border: 7px solid transparent;
+    border-right: 12px solid green; }
+  .messageWrong .messageWrong_text {
+    background-color: gold; }
+@keyframes appearing {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 100; } }
+.hidden {
+  display: none; }
+
 /*# sourceMappingURL=style.css.map */
