--- a/hw3/styles/style.scss
+++ b/hw3/styles/style.scss
@@ -19,3 +19,27 @@ textarea {
   outline: none;
   border: 2px solid red;
 }
+
+.messageWrong {
+  display: inline-block;
+  animation: appearing 1s ease-in-out;
+
+  //margin-left: 15px;
+  div {
+    display: inline-block;
+  }
+  .messageWrong_triangle {
+    border: 7px solid transparent;	border-right: 12px solid green;
+  }
+  .messageWrong_text {
+    background-color: gold;
+  }
+  @keyframes appearing {
+    from {opacity: 0}
+    to {opacity: 100}
+  }
+}
+
+.hidden {
+   display: none;
+ }
