--- a/hw4/2 Cities autocomplete/styles/style.scss
+++ b/hw4/2 Cities autocomplete/styles/style.scss
@@ -44,14 +44,14 @@ textarea {
    display: none;
  }
 
-#city_input {
+#city_input_form {
   position: relative;
   #city_list {
     position: absolute;
     top: 27px;
     left: 146px;
   }
-  #city_range {
+  #city_input {
     text-transform: capitalize;
     outline: none;
     &:active {
@@ -69,22 +69,23 @@ textarea {
     content: '';
     display: block;
     position: absolute;
-    //border: 1px solid #000;
-    border-radius: 5px;
+    border-radius: 20px;
     top: 6px;
-    left: 40%;
-    background-color: yellow;
-    box-shadow: 0 0 10px #3b9657;
-    width: 150px;
+    left: 53%;
+    background-color: indianred;
+    box-shadow: 0 0 10px #000000;
+    width: 20px;
     height: 20px;
-    opacity: 0.5;
+    opacity: 1;
     animation: appears 1s ease;
   }
   &:after {
-    content: 'only russian letters!';
+    content: 'Only russian letters!';
     position: absolute;
-    top: 8px;
-    left: 339px;
+    border-radius: 6px;
+    top: 6px;
+    left: 343px;
+    background-color: indianred;
     opacity: 0.8;
     animation: appears 1s ease;
   }
@@ -92,5 +93,12 @@ textarea {
     0% {opacity: 0}
     20% {opacity: 1}
     100% {opacity: 0.5}
+  }
+}
+
+.wrong_city {
+  @extend .wrong_input;
+  &:after {
+    content: 'No such city in data-base!';
   }
 }
