--- a/hw6/styles/style.scss
+++ b/hw6/styles/style.scss
@@ -20,6 +20,12 @@ textarea {
   border: 2px solid red;
 }
 
+#dialog {
+  span {
+    color: indianred;
+  }
+}
+
 .messageWrong {
   display: inline-block;
   animation: appearing 1s ease-in-out;
@@ -29,20 +35,25 @@ textarea {
     display: inline-block;
   }
   .messageWrong_triangle {
-    border: 7px solid transparent;	border-right: 12px solid green;
+    border: 7px solid transparent;
+    border-right: 12px solid green;
   }
   .messageWrong_text {
     background-color: gold;
   }
   @keyframes appearing {
-    from {opacity: 0}
-    to {opacity: 100}
+    from {
+      opacity: 0
+    }
+    to {
+      opacity: 100
+    }
   }
 }
 
 .hidden {
-   display: none;
- }
+  display: none;
+}
 
 #city_input_form {
   position: relative;
@@ -77,7 +88,6 @@ textarea {
     width: 20px;
     height: 20px;
     opacity: 1;
-    animation: appears 1s ease;
   }
   &:after {
     content: 'Only russian letters!';
@@ -87,12 +97,6 @@ textarea {
     left: 343px;
     background-color: indianred;
     opacity: 0.8;
-    animation: appears 1s ease;
-  }
-  @keyframes appears {
-    0% {opacity: 0}
-    20% {opacity: 1}
-    100% {opacity: 0.5}
   }
 }
 
@@ -103,9 +107,17 @@ textarea {
   }
 }
 
+.wrong_date {
+  @extend .wrong_input;
+  &:after {
+    content: 'Choose another date!';
+  }
+}
+
 .loader {
   display: none;
 }
+
 .container {
   position: absolute;
   left: 309px;
@@ -120,29 +132,39 @@ textarea {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
+
 .container span {
   position: absolute;
   height: 22px;
   width: 4px;
   background: #333;
 }
+
 #cog-0 {
   position: absolute;
   transform: rotate(0deg);
 }
+
 #cog-45 {
   position: absolute;
   transform: rotate(45deg);
 }
-#cog-90{
+
+#cog-90 {
   position: absolute;
   transform: rotate(90deg);
 }
-#cog-135{
+
+#cog-135 {
   position: absolute;
   transform: rotate(135deg);
 }
+
 @keyframes rotate {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
